--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -18,59 +18,59 @@
     display: none;
   }
 
-.search_box {
-  text-align: center;
-  height: 5%;
-  min-height: 30px;
-}
-
-.select_search_div {
-  width: 20%;
-  float: left;
-  margin-bottom: 0.75%;
-  text-align: center;
-  background-color: #383C3D;
-  color: white;
-}
-
-.search_input_div {
-  width: 80%;
-  float: left;
-  margin-bottom: 0.75%;
-}
-
-#searchCategory {
-  -webkit-appearance: none;
-  border: none;
-  background: none;
-  font-size: 1.3em;
-  height: 30px;
-  margin-left: 3%;
-  color: white;
-  border-radius: 0;
-  text-align: center;
-}
-
-#searchQuery {
-  width: 100%;
-  font-size: 1.3em;
-  height: 30px;
-  border: none;
-  border-radius: 0;
-  text-align: center;
-  padding: 0;
-}
-
-
-.map_dash {
-  width: 100%;
-  height: 100%;
-
-  #map {
-    height: 100%;
-    width: 100%;
+  .search_box {
+    text-align: center;
+    height: 5%;
+    min-height: 30px;
   }
-}
+
+  .select_search_div {
+    width: 20%;
+    float: left;
+    margin-bottom: 0.75%;
+    text-align: center;
+    background-color: #383C3D;
+    color: white;
+  }
+
+  .search_input_div {
+    width: 80%;
+    float: left;
+    margin-bottom: 0.75%;
+  }
+
+  #searchCategory {
+    -webkit-appearance: none;
+    border: none;
+    background: none;
+    font-size: 1.3em;
+    height: 30px;
+    margin-left: 3%;
+    color: white;
+    border-radius: 0;
+    text-align: center;
+  }
+
+  #searchQuery {
+    width: 100%;
+    font-size: 1.3em;
+    height: 30px;
+    border: none;
+    border-radius: 0;
+    text-align: center;
+    padding: 0;
+  }
+
+
+  .map_dash {
+    width: 100%;
+    height: 100%;
+
+    #map {
+      height: 100%;
+      width: 100%;
+    }
+  }
 
   .top_bar {
     -webkit-background-clip: border-box;
@@ -81,6 +81,7 @@
     background-size: auto;
     background-color: rgba(0, 0, 0, 0);
     background-image: -webkit-linear-gradient(top, rgb(62, 62, 62), rgb(56, 56, 56));
+    background-image: -moz-linear-gradient(top, rgb(62, 62, 62), rgb(56, 56, 56));
     background-origin: padding-box;
     background-size: auto;
     border-bottom-color: rgb(72, 72, 72);
@@ -110,10 +111,6 @@
       float: left;
       position: absolute;
       margin-top: 0.2%;
-    }
-
-    a {
-      // margin-right: 20px;
     }
   }
 
