--- a/app/views/people/index.html.haml
+++ b/app/views/people/index.html.haml
@@ -7,7 +7,7 @@
         = render 'people/picture', person: person
       .options
         .button#person_icons
-          = link_to image_tag('edit_icon.png', id: 'edit_icon'), edit_person_path(person)
+          = link_to image_tag('edit_icon.png', id: 'edit_icon_people'), edit_person_path(person)
           = link_to image_tag('x_icon_invert.png'), person, :method => :delete, :data => { :confirm => 'Are you sure?' }
       .checkins
         -# .person_divs
