--- a/app/views/checkins/form_fields/_assets.html.haml
+++ b/app/views/checkins/form_fields/_assets.html.haml
@@ -5,6 +5,7 @@
 = f.fields_for :assets do |asset|
   = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
   = asset.link_to_remove ""
+= f.link_to_add '',:assets
 
 - if params[:action] === 'edit'
   = f.fields_for :assets do |asset|
@@ -17,6 +18,3 @@
 
     = asset.file_field :media, style: 'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
     = asset.link_to_remove "X"
-
-/ .plus_button
-/   %img#add_media{src:'http://iconizer.net/files/Wireframe_mono_icons/orig/sq_plus.png'}
