styling to people pages and image on people edit

--- a/app/assets/stylesheets/categories/edit.scss
+++ b/app/assets/stylesheets/categories/edit.scss
@@ -3,17 +3,6 @@
   width: 35%;
   margin: 0 auto;
 
-  .title {
-    text-align: center;
-    margin: 20px auto 20px auto;
-    width: 70%;
-    padding: 2%;
-    border-bottom: 1.5px solid black;
-    color: black;
-    font-size: 2em;
-    font-weight: 800;
-  }
-
   form {
     width: 100%;
     text-align: center;
@@ -118,7 +107,7 @@
   width: 35%;
   height: 25%;
   border-radius: 3px;
-  background: #5BBD96;
+  background: #A9A9A9;
   margin: 0;
   padding: 2%;
 }
