styling to choose file for person on edit and new

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -142,5 +142,13 @@
     margin: 3%;
   }
 
+  #new_person_picture {
+    width: 65%;
+    margin: auto;
+  }
+
+#person_picture {
+  width: 81%;
+}
 
 
