--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -10,11 +10,14 @@ body[data-page=CheckinsPast] form {
 
 select[multiple] {
   border: none;
-  width: 100%;
-  border: none;
+  outline: none;
+  width: 100%; height: 83.6%;
   background: none;
-  font-size: 1.3em;
-
+  font-size: 0.9em;
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
+  margin: auto;
+  color: #fff;
+  overflow: auto;
   option {
     text-align: center;
   }
@@ -138,19 +141,6 @@ select[multiple] {
   width: 100%;
   height: 60%;
   margin-bottom: 0;
-}
-
-
-#checkin_category_ids, #checkin_person_ids {
-  font-size: 0.9em;
-  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
-  margin: auto;
-  color: #fff;
-  height: 100%;
-}
-
-select option.selected {
-  background-color: red;
 }
 
 .assets_form {
