--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,6 +1,6 @@
 .new_user,
 .edit_user {
-  width: 50%;
+  width: 100%;
   margin: 2% auto;
   text-align: center;
 
@@ -18,4 +18,22 @@
       padding: 3px 0px 3px 0px;
     }
   }
+}
+
+.button#account_cancel,
+.button#back_account {
+  width: 15%;
+  height: 25%;
+  border-radius: 3px;
+  background: #A9A9A9;
+  padding: 1%;
+  margin: 0 auto;
+  margin-bottom: 2%;
+}
+
+#account_cancel_button {
+  border: none;
+  background-color: transparent;
+  color: #fff;
+  font-family: "Sinhala Sangam MN", "Perpetua", "Garamond";
 }
