--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -3,7 +3,7 @@
 = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
   = render 'partials/errors', resource: @user
 
-  .new_session
+  .edit_user
     - if params[:action] != 'edit'
       %h1.logo
         = image_tag 'Ehxe_logo.png', id: 'ehxe_logo'
@@ -29,10 +29,9 @@
     .field.actions.login
       = f.submit 'UPDATE', class: 'submit_button'
 
-%h3 Cancel My Account
+    .options
+      .button#account_cancel
+        = button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete, id: "account_cancel_button"
 
-%p
-  Unhappy?
-  = button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete
-
-= link_to "Back", :back
+      .button#back_account
+        = link_to "Back", :back
