--- a/app/assets/stylesheets/signin_login.css.scss
+++ b/app/assets/stylesheets/signin_login.css.scss
@@ -83,3 +83,26 @@ input#user_password_confirmation {
   width: 30%;
   padding: 1%;
 }
+
+
+// DEVISE STYLING
+
+.remember_me_div {
+  margin-top: 2%;
+  font-size: .8em;
+}
+
+.devise_container_div {
+  margin-top: 2%;
+}
+
+#sign_in_devise_link, #sign_up_devise_link {
+  font-size: 1em;
+  padding: 2%;
+}
+
+#forgot_password_devise_link {
+  padding: 2%;
+  font-size: 1em;
+}
+
