--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,4 +1,5 @@
 .jPanelMenu-panel {
+  position: relative;
   height: 100%;
   width: 100%;
 }
@@ -73,6 +74,9 @@
   }
 
   .top_bar {
+    position: absolute;
+    top: 0; left: 0;
+    width: 100%; height: 4%; min-height: 30px;
     -webkit-background-clip: border-box;
     -webkit-background-origin: padding-box;
     -webkit-background-size: auto;
@@ -93,14 +97,7 @@
     font-size: 16px;
     font-weight: bold;
     text-shadow: rgb(34, 34, 34) 0px -1px 2px;
-    width: 225px;
     zoom: 1;
-    position: relative;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 30px;
-    height: 4%;
     font-size: 1.5em;
     border: 0;
     text-align: center;
@@ -116,9 +113,9 @@
 
   .content {
     position: absolute;
-    left: 0;
+    left: 0; top: 5.5%;
     width: 100%;
-    height: 96%;
+    height: 94.5%;
     overflow: auto;
     background-image: url('tweed.png')
   }
@@ -146,15 +143,12 @@
 #location, #category, #people {
   margin: 1px;
   position: relative;
-  // display: block;
   z-index: 1;
 }
 
 #location_red, #category_red, #people_red {
   margin: 1px;
   position: absolute;
-  // display: block;
-  // display: none;
   z-index: 0;
 }
 
