--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,14 @@
 }
 
 .logo_div {
-  margin-top: 3%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  text-align: center;
+  background: black;
+  height: 15%;
+  img {
+    height: 100%;
+  }
 }
 
 #marker_home {
