--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -65,7 +65,8 @@
 
   .map_dash {
     width: 100%;
-    height: 100%;
+    height: 94%;
+    margin-top: 2.9%;
 
     #map {
       height: 100%;
@@ -113,20 +114,13 @@
 
   .content {
     position: absolute;
-    left: 0; top: 5.5%;
-    width: 100%;
-    height: 94.5%;
+    top: 0;
+    left: 0;
+    width: 100%; height: 100%;
     overflow: auto;
     background-image: url('tweed.png')
   }
 
-  .errors {
-    font-size: 1em;
-    width: 100%;
-    border: 2px solid red;
-    border-radius: 5px;
-    margin: 0 auto;
-  }
 }
 
 @media all and (max-width: 700px) {
