--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -74,4 +74,15 @@
   height: 100%;
 }
 
+#error_explanation {
+    width: 50%;
+    margin: 0 auto;
+    border-radius: 3px;
+    border: 2px solid grey;
+    padding: 1%;
+    background: white;
+    h2 {
+
+    }
+}
 
