--- a/app/views/partials/_errors.html.haml
+++ b/app/views/partials/_errors.html.haml
@@ -1,6 +1,6 @@
-- if resource.errors.any?
+- if flash[:error]
   .errors
     #error_explanation
-      %h2= "#{pluralize(resource.errors.count, "error")} prohibited this checkin from being saved:"
-      - resource.errors.full_messages.each do |msg|
-        %p= msg
+      - flash.each do |name, msg|
+        - if msg.is_a?(String)
+          = content_tag :div, msg, :id => "flash_#{name}"
