changing words only checkins to words on timeline

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -30,6 +30,11 @@
   // height: 85%;
 }
 
+.jpage_image.checkin_description {
+  overflow: hidden;
+  background-color: #fff;
+}
+
 .jpage_category_bar {
   width: 95%;
   height: 10px;
