--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,3 +28,5 @@
 
     = javascript_include_tag "application"
     %script{src:"http://code.jquery.com/ui/1.10.3/jquery-ui.js"}
+
+    = render "layouts/test"
