adding words to homepage

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -86,3 +86,14 @@
     }
 }
 
+.about {
+  text-align: center;
+  clear: both;
+  margin: auto;
+  color: #777;
+  font-family: "Sinhala MN", "Sinhala Sangam MN", "Perpetua", "Garamond";
+  width: 30%;
+  font-size: 1.2em;
+  padding-top: 3%;
+}
+
