--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -7,3 +7,5 @@
     = image_tag 'exhe_marker_clear.png', id: 'marker_home'
   .home_links
     = link_to 'SIGNUP', new_user_registration_path, id: 'signup_home'
+  .about
+    EHXE IS A NEW WAY TO VISUALIZE THE IMPORTANT PARTS OF YOUR LIFE. ADD WORDS, PHOTOS, VIDEOS AND SOUNDS TO MARK YOUR EXPERIENCES.
