fixing margin on checkin scroll

--- a/app/assets/stylesheets/checkins/show.scss
+++ b/app/assets/stylesheets/checkins/show.scss
@@ -48,6 +48,10 @@
   height: 100%;
 }
 
+.assets:first-child {
+  margin-left: 10px;
+}
+
 .image_show, .video_show, .words_div {
   margin-right: 10px;
   float: left;
