--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -8,4 +8,4 @@
   .home_links
     = link_to 'SIGNUP', new_user_registration_path, id: 'signup_home'
   .about
-    EHXE IS A NEW WAY TO VISUALIZE THE IMPORTANT PARTS OF YOUR LIFE. ADD WORDS, PHOTOS, VIDEOS AND SOUNDS TO MARK YOUR EXPERIENCES.
+    EHXE IS A NEW WAY TO VISUALIZE THE IMPORTANT PARTS OF YOUR LIFE. ADD WORDS, PHOTOS, AND SOUNDS TO MARK YOUR EXPERIENCES.
