--- a/app/assets/stylesheets/categories/show.scss
+++ b/app/assets/stylesheets/categories/show.scss
@@ -5,3 +5,47 @@
     font-size: 2.53em;
   }
 }
+
+#category_show {
+    padding: 1%;
+    color: white;
+    background-color: purple;
+    border-radius: 3px;
+    width: 30%;
+    -webkit-transition: all 1s ease-in;
+    -moz-transition: all 1s ease-in;
+    -o-transition: all 1s ease-in;
+    -ms-transition:all 1s ease-in;
+    transition: all 1s ease-in;
+    margin: auto;
+    text-align: center;
+    margin: 2% auto;
+}
+
+#category_checkins {
+  margin: auto;
+  width: 50%;
+  text-align: center;
+}
+
+#category_checkin_title {
+  color: #fff;
+  text-align: center;
+  margin: auto;
+  padding: 2%;
+}
+
+.options#category_back .button {
+  width: 10%;
+  height: 25%;
+  border-radius: 3px;
+  background: #A9A9A9;
+  padding: 1%;
+  margin: 0 auto;
+  margin-bottom: 2%;
+  margin-top: 0;
+}
+
+.options#category_back {
+  padding-top: 0;
+}
