styling changes and tweaks to signup, login, people, account page

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -76,6 +76,7 @@
 
 #person_image {
   width: 50%;
+  margin-top: 3%;
 }
 
 .picture_show {
@@ -114,8 +115,7 @@
 
     #new_person_title {
       width: 100%;
-      margin-top: 8%;
-      padding: 0;
+      padding-top: 15%;
     }
 
     #person_name {
