--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,8 +1,8 @@
 .new_user,
 .edit_user {
   width: 100%;
-  margin: 2% auto;
   text-align: center;
+  padding-top: 3%;
 
   form {
     width: 100%;
@@ -18,6 +18,10 @@
       padding: 3px 0px 3px 0px;
     }
   }
+}
+
+.new_user {
+  padding-top: 0;
 }
 
 .button#account_cancel,
