--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -176,12 +176,7 @@ select[multiple] {
   background-color: #333;
   display: block;
   margin-bottom: 2%;
-  padding-top: 2%;
-}
-
-#form_field_label.assets {
-  margin-top: 0;
-  padding-top: 1%;
+  padding-top: 3px;
 }
 
 .submit_checkin {
