--- a/app/views/checkins/form_fields/_categories.html.haml
+++ b/app/views/checkins/form_fields/_categories.html.haml
@@ -1,4 +1,4 @@
 - if !current_user.categories.empty?
   .field#categories_form
     #form_field_label CATEGORIES
-    = f.select :category_ids, current_user.categories.collect { |x| [x.name,x.id] }, {prompt: false}, multiple: true
+    = f.select :category_ids, current_user.categories.collect { |x| [x.name,x.id] }, {prompt: false}, multiple: true, required: true
