--- a/app/views/checkins/form_fields/_people.html.haml
+++ b/app/views/checkins/form_fields/_people.html.haml
@@ -1,6 +1,6 @@
 .people_content
   .field#people_form
-    #form_field_label PEOPLE
+    #form_field_label.form_title_div PEOPLE
     - if !current_user.people.empty?
       = f.select :person_ids, current_user.people.collect { |x| [x.name,x.id] }, {prompt: false}, multiple: true
     - else
