--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -202,10 +202,7 @@ select[multiple] {
 
 #form_field_label.assets {
   margin-top: 0;
-  padding-top: 1%;2%;
-  // padding-top: 3p
-  // margin-bottom: x;
-
+  padding-top: 1%;
 }
 
 .submit_checkin {
