--- a/app/assets/stylesheets/checkins/show.scss
+++ b/app/assets/stylesheets/checkins/show.scss
@@ -17,6 +17,14 @@
   position: relative;
 }
 
+.date_show {
+  position: absolute;
+  left: 3%;
+  top: 35%;
+  color: #fff;
+  font-size: 0.7em;
+}
+
 .edit_delete_links {
   position: absolute;
   top: 0;
@@ -66,7 +74,7 @@
   max-width: 200px;
   overflow: scroll;
   padding-top: 1%;
-  height: 94%;
+  height: 96%;
   text-align: left;
   line-height: 125%;
   box-shadow: 5px 5px 2px #777;
