--- a/app/views/checkins/form_fields/_assets.html.haml
+++ b/app/views/checkins/form_fields/_assets.html.haml
@@ -1,9 +1,9 @@
-= f.fields_for :assets do |asset|
-  = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
-  = asset.link_to_remove ""
-= f.link_to_add '',:assets
+- if params[:action] === 'new' || params[:action] === 'past'
+  = f.fields_for :assets do |asset|
+    = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
+    = asset.link_to_remove ""
+  = f.link_to_add '',:assets
 
-/ .add_media_scroll_container
 .add_media
   %img#add_media{src:'https://s3-eu-west-1.amazonaws.com/ehxe/plus_icon.png'}
 - if params[:action] === 'edit'
