--- a/app/views/checkins/show.html.haml
+++ b/app/views/checkins/show.html.haml
@@ -1,7 +1,8 @@
 .show_checkin_container{data: { id: @checkin.id } }
   .title_container
-    .date_show
-      = (@checkin.date.to_date).strftime('%d/%m/%Y')
+    - if @checkin.date
+      .date_show
+        = (@checkin.date.to_date).strftime('%d/%m/%Y')
     = @checkin.title
     .edit_delete_links
       = link_to image_tag('edit_icon.png', id: "edit_icon_show_page"), edit_checkin_path(@checkin)
