--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -3,7 +3,7 @@
   position: absolute;
   width: 100%;
   height: auto;
-  background-color: rgba(128,128,128,.8);
+  background-image: url('tweed.png') ;
 }
 
 .timelinecontainer {
