--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -9,7 +9,7 @@
 
     .search_box
       .select_search_div
-        %input{type:'text',style:'display:none',id:'searchCategory',value:'category'}
+        %input{type:'text',style:'display:none',id:'searchCategory',value:'Location'}
 
         %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Location_icon_grey.png', data: { value: 'Location'}}
 
