--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -78,6 +78,17 @@
     }
   }
 
+  .map_dash_hundred {
+    width: 100%;
+    height: 100%;
+    margin-top: 2.9%;
+
+    #map {
+      height: 100%;
+      width: 100%;
+    }
+  }
+
   .top_bar {
     position: absolute;
     top: 0; left: 0;
