--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html
   %head
-    %title YourWorld
+    %title EHXE
     = stylesheet_link_tag    "application", :media => "all"
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans", :rel => "stylesheet", :type => "text/css"}
     %link{rel:'stylesheet',href:'http://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css'}
