media query on search select and input

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,7 +12,7 @@
  *= require_tree .
  */
 
-@import url(http://reset5.googlecode.com/hg/reset.min.css);
+/*@import url(http://reset5.googlecode.com/hg/reset.min.css);*/
 
 body {
   background-color: #000;
