--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -144,11 +144,11 @@
 @media all and (max-width: 700px) {
 
    .select_search_div {
-    width: 50%;
+    width: 100% !important;
   }
 
   .search_input_div {
-    width: 50%;
+    width: 100% !important;
   }
 }
 
