--- a/app/views/checkins/form_fields/_assets.html.haml
+++ b/app/views/checkins/form_fields/_assets.html.haml
@@ -1,20 +1,22 @@
-- if params[:action] === 'new' || params[:action] === 'past'
+.previews
+  - if params[:action] === 'new' || params[:action] === 'past'
+    .new_media
+      = f.fields_for :assets do |asset|
+        = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
+        = asset.link_to_remove ""
+      = f.link_to_add '',:assets
 
-  = f.fields_for :assets do |asset|
-    = asset.file_field :media, style:'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
-    = asset.link_to_remove ""
-  = f.link_to_add '',:assets
+  - if params[:action] === 'edit'
+    = f.fields_for :assets do |asset|
+      .new_media
+        - if asset.object.type
+          - if asset.object.type === 'Image'
+            = image_tag asset.object.media.thumb.url, class: 'upload_preview'
+          - elsif asset.object.type === 'Audio'
+            = image_tag 'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/audio.png', class: 'upload_preview'
+
+      = asset.file_field :media, style: 'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
+      = asset.link_to_remove "", class: 'delete_asset'
 
 .add_media
   %img#add_media{src:'https://s3-eu-west-1.amazonaws.com/ehxe/plus_icon.png'}
-- if params[:action] === 'edit'
-  = f.fields_for :assets do |asset|
-    .new_media
-      - if asset.object.type
-        - if asset.object.type === 'Image'
-          = image_tag asset.object.media.thumb.url, class: 'upload_preview'
-        - elsif asset.object.type === 'Audio'
-          = image_tag 'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/audio.png', class: 'upload_preview'
-
-    = asset.file_field :media, style: 'display:none' #DO NOT DELETE OR FILE UPLOAD WILL NOT WORK
-    = asset.link_to_remove "", class: 'delete_asset'
