homepage media query for responsive

--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -33,6 +33,7 @@
 .jpage_image.checkin_description {
   overflow: hidden;
   background-color: #fff;
+  margin-bottom: 3%;
 }
 
 .jpage_category_bar {
