--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -97,3 +97,10 @@
   padding-top: 3%;
 }
 
+@media all and (max-width: 700px) {
+
+   .about {
+    width: 90% !important;
+    font-size: 1.2em;
+  }
+}
