--- a/app/views/partials/_errors.html.haml
+++ b/app/views/partials/_errors.html.haml
@@ -4,7 +4,8 @@
       - flash.each do |name, msg|
         - if msg.is_a?(String)
           = content_tag :div, msg, :id => "flash_#{name}"
-- if resource.errors.any?
-  #error_explanation
-    - resource.errors.full_messages.each do |msg|
-      = msg
+- else
+  - if resource.errors.any?
+    #error_explanation
+      - resource.errors.full_messages.each do |msg|
+        = msg
