--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -256,3 +256,13 @@ select[multiple] {
   margin-top: -1%;
 }
 
+@media all and (max-width: 700px) {
+
+.checkin_form {
+
+  form {
+    width: 90%;
+
+    }
+  }
+}
