--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -132,9 +132,9 @@
 
   .content {
     position: absolute;
-    top: 0;
+    top: 3.4%;
     left: 0;
-    width: 100%; height: 100%;
+    width: 100%; height: 96.6%;
     overflow: auto;
     background-image: url('tweed.png')
   }
