fixing thumbnail size

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -74,10 +74,11 @@
   width: 100%;
 }
 
-#person_image {
-  width: 50%;
-  margin-top: 3%;
+.person_image img {
+    width: 50%;
+    margin-top: 3%;
 }
+
 
 .picture_show {
   width: 70%;
