media upload responsive

--- a/app/assets/stylesheets/checkins/checkin_form.css.scss
+++ b/app/assets/stylesheets/checkins/checkin_form.css.scss
@@ -258,11 +258,19 @@ select[multiple] {
 
 @media all and (max-width: 700px) {
 
-.checkin_form {
+  .checkin_form {
 
-  form {
-    width: 90%;
+    form {
+      width: 90%;
+      }
 
+    .media_upload_container {
+      width: 38%;
+    }
+
+    .people_form,
+    .categories_form {
+      height: 28%;
     }
   }
 }
