fixed assets container

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,6 +13,7 @@
     = csrf_meta_tags
     -# this meta_tag below makes the check-in map render on mobile without unwanted scaling
     %meta{:name =>"viewport", :content =>"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"}
+    = javascript_include_tag 'assets_container'
   %body{data: {page: [controller_name.capitalize, action_name.capitalize].join} }
 
     .container
