--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -73,7 +73,7 @@
   .map_dash {
     width: 100%;
     height: 70%;
-    margin-top: 2.9%;
+    margin-top: 3.2%;
 
     #map {
       height: 100%;
@@ -132,7 +132,7 @@
 
   .content {
     position: absolute;
-    top: 3.4%;
+    top: 0;
     left: 0;
     width: 100%; height: 96.6%;
     overflow: auto;
