--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -1,3 +1,9 @@
+.dash_container {
+  width: 100%;
+  height: 100%;
+  padding-top: 3.2%;
+}
+
 .jPanelMenu-panel {
   position: relative;
   height: 100%;
@@ -73,7 +79,7 @@
   .map_dash {
     width: 100%;
     height: 70%;
-    margin-top: 3.2%;
+    // margin-top: 3.2%;
 
     #map {
       height: 100%;
@@ -164,3 +170,10 @@
   z-index: 0;
 }
 
+
+@media all and (min-width: 1400px) {
+
+   .select_search_div {
+    // width: 100% !important;
+  }
+}
