--- a/app/views/checkins/index.html.haml
+++ b/app/views/checkins/index.html.haml
@@ -1,29 +1,30 @@
-- if current_user.checkins.length == 0
-  .map_dash_hundred
-    #map
-- else
-  .map_dash
-    #map
-  .bottom_container
+.dash_container
+  - if current_user.checkins.length == 0
+    .map_dash_hundred
+      #map
+  - else
+    .map_dash
+      #map
+    .bottom_container
 
-    .timelinecontainer
-      / JPAGES NAV PANEL
-      .holder#centernav
+      .timelinecontainer
+        / JPAGES NAV PANEL
+        .holder#centernav
 
-      .search_box
-        .select_search_div
-          %input{type:'text',style:'display:none',id:'searchCategory',value:'Location'}
+        .search_box
+          .select_search_div
+            %input{type:'text',style:'display:none',id:'searchCategory',value:'Location'}
 
-          %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Location_icon_grey.png', data: { value: 'Location'}}
+            %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Location_icon_grey.png', data: { value: 'Location'}}
 
-          %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Category_icon_grey.png', data: { value: 'Category'}}
+            %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/Category_icon_grey.png', data: { value: 'Category'}}
 
-          %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People_icon_grey.png', data: { value: 'People'}}
+            %img.categoryChoice{src:'https://s3-eu-west-1.amazonaws.com/ehxe/defaults/People_icon_grey.png', data: { value: 'People'}}
 
-        .search_input_div
-          %input{type:'text',name:'query',id:'searchQuery',placeholder:"SEARCH"}
+          .search_input_div
+            %input{type:'text',name:'query',id:'searchQuery',placeholder:"SEARCH"}
 
 
-      / JPAGES ITEM CONTAINER
-      .timeline_holder
-        %ul#itemContainer
+        / JPAGES ITEM CONTAINER
+        .timeline_holder
+          %ul#itemContainer
