--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -90,7 +90,7 @@
   .map_dash_hundred {
     width: 100%;
     height: 100%;
-    margin-top: 2.9%;
+    // margin-top: 2.9%;
 
     #map {
       height: 100%;
